# bestfy

./: .gitignore  README.md
backend/: .env  main.py  makefile  pyproject.toml
backend/app/core/security/: dependencies.py  token.py
backend/app/models/: blacklist.py  playlist.py  user.py  user_interactions.py
backend/app/modules/auth/: auth_controller.py  auth_schema.py  auth_service.py
backend/app/modules/playlist/: playlist_controller.py  playlist_repository.py  playlist_schema.py  playlist_service.py
backend/app/modules/user/: user_controller.py  user_repository.py  user_service.py
backend/scripts/: reset_db.py
frontend/: index.html
frontend/spotify/: package-lock.json  package.json
frontend/spotify/src/: App.tsx  main.tsx
frontend/spotify/src/components/: carrosel.tsx  topBar.tsx
frontend/spotify/src/pages/: album_page.tsx  artist_page.tsx  home.tsx
frontend/spotify/src/service/: api.ts  authService.ts  tokenService.ts
frontend/spotify/src/types/: user.ts
frontend/src/: App.tsx
frontend/src/assets/layout/: topBar.tsx
frontend/src/components/: carrosel.tsx  private_route.tsx  topBar.tsx
frontend/src/context/auth/: authProvider.tsx
frontend/src/pages/: album_page.tsx  artist_page.tsx  home.tsx
frontend/src/pages/auth/: login.tsx  (+1 more)
frontend/src/service/: authService.ts
frontend/src/types/: user.ts
scrapper/: pyproject.toml
scrapper/bestfy/: middlewares.py
scrapper/bestfy/spiders/: playlist.py
spotify/spotify/: output.json  pipelines.py  playlists.json  settings.py  teste.json
spotify/spotify/spiders/: playlist.py
(+7 files in other folders)
