[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "luigi ",email = "150992024@eniac.edu.br"}
]
requires-python = ">=3.14"
dependencies = [
    "psycopg[binary] (>=3.3.3,<4.0.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "sqlalchemy (>=2.0.48,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
