[project]
name = "spotify"
version = "0.1.0"
description = ""
authors = [
    {name = "luigi ",email = "150992024@eniac.edu.br"}
]
requires-python = ">=3.14"
dependencies = [
    "scrapy (>=2.14.2,<3.0.0)",
    "playwright (>=1.58.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
